# LangChain.Eco-Friendly-Agent

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: 01_db_setup.ipynb  01_db_setup.py  02_rag_setup.ipynb  02_rag_setup.py  03_run_and_evaluate.ipynb  03_run_and_evaluate.py  agent.py  main.py  tools.py
src/data/documents/: tip_energy_storage.txt  tip_hvac_optimization.txt  tip_renewable_integration.txt  tip_seasonal_energy.txt  tip_smart_home_automation.txt
src/models/: energy.py
tests/: test_electricity_api.py  test_weather_api.py
